data/derived/sp14/progs/unify/prog2337.ml.out
Characters 35-38:
  let concatL = fold_l (fun temp h-> h*h ^ temp) 0 list2;;
                                     ^^^
Error: This expression has type int but an expression was expected of type
         string
